Basic version that generates views and entities based on playbook.ts file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,11 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Launch CLI",
             "program": "${workspaceFolder}/bin/cli.js",
+            "args": [
+                "generate"
+            ],
             "env": {
                 "DEBUG": "react-puppet:*"
             }
