--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch CLI",
+            "cwd": "${workspaceFolder}/test-project",
             "program": "${workspaceFolder}/bin/cli.js",
             "args": [
                 "generate"
